@@ -60,7 +60,7 @@
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static int	process_record(int nodeid, char *record, char **buffer, size_t *allocated)
+static int	process_record(int nodeid, char *record)
 {
 	char		tablename[MAX_STRING_LEN];
 	char		fieldname[MAX_STRING_LEN];
@@ -72,27 +72,33 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 	char		*key=NULL;
 	DB_RESULT	result;
 	DB_ROW		row;
-	char		*sql = NULL, *fields_update = NULL, *fields = NULL, *values = NULL;
-	int		sql_allocated = 16*1024, sql_offset = 0;
+	char		*r, *buffer = NULL, *tmp = NULL, *fields_update = NULL, *fields = NULL, *values = NULL;
+	int		buffer_allocated = 16*1024;
+	int		tmp_allocated = 16*1024, tmp_offset = 0;
 	int		fields_update_allocated = 16*1024, fields_update_offset = 0;
 	int		fields_allocated = 4*1024, fields_offset = 0;
 	int		values_allocated = 16*1024, values_offset = 0;
+#if defined(HAVE_POSTGRESQL)
+	int		len;
+#endif /* HAVE_POSTGRESQL */
 
 	zabbix_log( LOG_LEVEL_DEBUG, "In process_record [%s]", record);
 
-	sql = zbx_malloc(sql, sql_allocated);
+	r = record;
+	buffer = zbx_malloc(buffer, buffer_allocated);
+	tmp = zbx_malloc(tmp, tmp_allocated);
 	fields_update = zbx_malloc(fields_update, fields_update_allocated);
 	fields = zbx_malloc(fields, fields_allocated);
 	values = zbx_malloc(values, values_allocated);
 
-	record = zbx_get_next_field(record, buffer, allocated, ZBX_DM_DELIMITER);
-	strcpy(tablename, *buffer);
+	r = zbx_get_next_field(r, &buffer, &buffer_allocated, ZBX_DM_DELIMITER);
+	strcpy(tablename, buffer);
 
-	record = zbx_get_next_field(record, buffer, allocated, ZBX_DM_DELIMITER);
-	sscanf(*buffer,ZBX_FS_UI64,&recid);
+	r = zbx_get_next_field(r, &buffer, &buffer_allocated, ZBX_DM_DELIMITER);
+	sscanf(buffer, ZBX_FS_UI64,&recid);
 
-	record = zbx_get_next_field(record, buffer, allocated, ZBX_DM_DELIMITER);
-	op = atoi(*buffer);
+	r = zbx_get_next_field(r, &buffer, &buffer_allocated, ZBX_DM_DELIMITER);
+	op = atoi(buffer);
 
 	for(i=0;tables[i].table!=0;i++)
 	{
@@ -111,26 +117,26 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 	}
 	if(op==NODE_CONFIGLOG_OP_DELETE)
 	{
-		zbx_snprintf_alloc(&sql, &sql_allocated, &sql_offset, 16*1024, "delete from %s where %s=" ZBX_FS_UI64,
+		zbx_snprintf_alloc(&tmp, &tmp_allocated, &tmp_offset, 16*1024, "delete from %s where %s=" ZBX_FS_UI64,
 			tablename,
 			key,
 			recid);
-		DBexecute("%s", sql);
+		DBexecute("%s", tmp);
 		return SUCCEED;
 	}
 
-	while(record != NULL)
+	while(r != NULL)
 	{
-		record = zbx_get_next_field(record, buffer, allocated, ZBX_DM_DELIMITER);
-		strcpy(fieldname, *buffer);
+		r = zbx_get_next_field(r, &buffer, &buffer_allocated, ZBX_DM_DELIMITER);
+		strcpy(fieldname, buffer);
 
-		record = zbx_get_next_field(record, buffer, allocated, ZBX_DM_DELIMITER);
-		valuetype=atoi(*buffer);
+		r = zbx_get_next_field(r, &buffer, &buffer_allocated, ZBX_DM_DELIMITER);
+		valuetype=atoi(buffer);
 
-		record = zbx_get_next_field(record, buffer, allocated, ZBX_DM_DELIMITER);
+		r = zbx_get_next_field(r, &buffer, &buffer_allocated, ZBX_DM_DELIMITER);
 		if(op==NODE_CONFIGLOG_OP_UPDATE || op==NODE_CONFIGLOG_OP_ADD)
 		{
-			if(strcmp(*buffer, "NULL") == 0)
+			if(strcmp(buffer, "NULL") == 0)
 			{
 				zbx_snprintf_alloc(&fields_update, &fields_update_allocated, &fields_update_offset, 16*1024, "%s=NULL,",
 					fieldname);
@@ -142,13 +148,13 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 				{
 					zbx_snprintf_alloc(&fields_update, &fields_update_allocated, &fields_update_offset, 16*1024, "%s=%s,",
 						fieldname,
-						*buffer);
+						buffer);
 					zbx_snprintf_alloc(&values, &values_allocated, &values_offset, 16*1024, "%s,",
-						*buffer);
+						buffer);
 				}
 				else if(valuetype == ZBX_TYPE_BLOB)
 				{
-					if(**buffer == '\0')
+					if(*buffer == '\0')
 					{
 						zbx_snprintf_alloc(&fields_update, &fields_update_allocated, &fields_update_offset, 16*1024, "%s='',",
 							fieldname);
@@ -156,17 +162,27 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 					}
 					else
 					{
+#if defined(HAVE_POSTGRESQL)
+						len = zbx_hex2binary(buffer);
+						zbx_pg_escape_bytea((u_char *)buffer, len, &tmp, &tmp_allocated);
+						zbx_snprintf_alloc(&fields_update, &fields_update_allocated, &fields_update_offset, 16*1024, "%s='%s',",
+							fieldname,
+							tmp);
+						zbx_snprintf_alloc(&values, &values_allocated, &values_offset, 16*1024, "'%s',",
+							tmp);
+#else
 						zbx_snprintf_alloc(&fields_update, &fields_update_allocated, &fields_update_offset, 16*1024, "%s=0x%s,",
 							fieldname,
-							*buffer);
+							buffer);
 						zbx_snprintf_alloc(&values, &values_allocated, &values_offset, 16*1024, "0x%s,",
-							*buffer);
+							buffer);
+#endif
 					}
 				}
 				else /* ZBX_TYPE_TEXT, ZBX_TYPE_CHAR */
 				{
-					zbx_hex2binary(*buffer);
-					DBescape_string(*buffer, value_esc,MAX_STRING_LEN);
+					zbx_hex2binary(buffer);
+					DBescape_string(buffer, value_esc,MAX_STRING_LEN);
 
 					zbx_snprintf_alloc(&fields_update, &fields_update_allocated, &fields_update_offset, 16*1024, "%s='%s',",
 						fieldname,
@@ -191,11 +207,12 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 
 	if(op==NODE_CONFIGLOG_OP_UPDATE)
 	{
-		zbx_snprintf_alloc(&sql, &sql_allocated, &sql_offset, 16*1024, "update %s set %s where %s=" ZBX_FS_UI64,
+		zbx_snprintf_alloc(&tmp, &tmp_allocated, &tmp_offset, 16*1024, "update %s set %s where %s=" ZBX_FS_UI64,
 			tablename,
 			fields_update,
 			key,
 			recid);
+/*zabbix_log( LOG_LEVEL_WARNING, "----- process_record() [5] [tmp_allocated:%d] [tmp_offset:%d] [tmp:%s]", tmp_allocated, tmp_offset, tmp);*/
 	}
 	else if(op==NODE_CONFIGLOG_OP_ADD)
 	{
@@ -206,7 +223,7 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 		row = DBfetch(result);
 		if(row)
 		{
-			zbx_snprintf_alloc(&sql, &sql_allocated, &sql_offset, 16*1024, "update %s set %s where %s=" ZBX_FS_UI64,
+			zbx_snprintf_alloc(&tmp, &tmp_allocated, &tmp_offset, 16*1024, "update %s set %s where %s=" ZBX_FS_UI64,
 				tablename,
 				fields_update,
 				key,
@@ -214,19 +231,25 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 		}
 		else
 		{
-			zbx_snprintf_alloc(&sql, &sql_allocated, &sql_offset, 16*1024, "insert into %s (%s) values(%s)",
+			zbx_snprintf_alloc(&tmp, &tmp_allocated, &tmp_offset, 16*1024, "insert into %s (%s) values(%s)",
 				tablename,
 				fields,
 				values);
 		}
 		DBfree_result(result);
 	}
-/*	zabbix_log( LOG_LEVEL_WARNING, "SQL [%s]", sql);*/
-	if(FAIL == DBexecute("%s",sql))
+/*	zabbix_log( LOG_LEVEL_WARNING, "SQL [%s]", tmp);*/
+	if(FAIL == DBexecute("%s",tmp))
 	{
 		zabbix_log( LOG_LEVEL_WARNING, "Failed [%s]",
 			record);
 	}
+
+	zbx_free(buffer);
+	zbx_free(tmp);
+	zbx_free(fields_update);
+	zbx_free(fields);
+	zbx_free(values);
 
 	return SUCCEED;
 }
@@ -249,7 +272,7 @@ static int	process_record(int nodeid, char *record, char **buffer, size_t *alloc
 int	node_sync(char *data)
 {
 	char	*start, *newline = NULL, *tmp = NULL;
-	size_t	allocated = 1024;
+	int	allocated = 1024;
 	int	firstline=1;
 	int	nodeid=0;
 	int	sender_nodeid=0;
@@ -290,7 +313,7 @@ int	node_sync(char *data)
 		else
 		{
 /*			zabbix_log( LOG_LEVEL_WARNING, "Got line [%s]", s);*/
-			process_record(nodeid, start, &tmp, &allocated);
+			process_record(nodeid, start);
 		}
 
 		if(newline != NULL)
@@ -306,29 +329,6 @@ int	node_sync(char *data)
 	}
 	zbx_free(tmp);
 
-/*	s=(char *)strtok(data,"\n");
-	while(s!=NULL)
-	{
-		if(firstline == 1)
-		{
-			zbx_get_field(s,tmp,1,ZBX_DM_DELIMITER);
-			sender_nodeid=atoi(tmp);
-			zbx_get_field(s,tmp,2,ZBX_DM_DELIMITER);
-			nodeid=atoi(tmp);
-			firstline=0;
-			zabbix_log( LOG_LEVEL_WARNING, "NODE %d: Received data from node %d for node %d datalen %d",
-					CONFIG_NODEID,
-					sender_nodeid,
-					nodeid,
-					datalen);
-		}
-		else
-		{
-			process_record(nodeid, s);
-		}
-
-       		s=(char *)strtok(NULL,"\n");
-	}*/
 	DBcommit();
 
 	return SUCCEED;
